# codeagent

./: .gitignore  Makefile  README.md  backend_implementation.md  docker-compose.infra.yml  docker-compose.yml  frontend_implementation.md  overview.md
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/app/: __init__.py  config.py  models.json
backend/app/agents/: data_analysis_agent.py
backend/app/agents/base/: __init__.py  base_agent.py  rich_coding_agent.py
backend/app/agents/executors/: __init__.py  daytona_executor.py  executor.py  smolagents_executor.py
backend/app/api/routes/: artifacts.py  auth.py  models.py  projects.py  query.py  sessions.py  upload.py  users.py
backend/app/core/: auth.py  cache.py  deps.py  memory.py  storage.py
backend/app/db/: init_db.py  models.py  pool.py  session_db.py
backend/app/prompts/: __init__.py  manager.py
backend/app/prompts/templates/coding/: data_analysis.jinja2  global.jinja2
backend/app/services/: agent_orchestrator.py  cache_warmer.py  export_service.py  session_state_service.py  workspace_service.py  workspace_tools.py
backend/app/shared/: __init__.py  errors.py  llm.py  logging.py  models.py  plots_theme.py  schemas.py  serialization.py  stream_models.py
backend/app/tasks/: cleanup.py
frontend/: .env.example  Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  models.ts  projects.ts  query.ts  sessions.ts  upload.ts
frontend/src/hooks/: useArtifacts.ts  useChat.ts  useFileUpload.ts  (+2 more)
(+32 files in other folders)
